# qt5_shiboken2_pyside2_example

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  Window.cpp  Window.h
cpp/bindings/: CMakeLists.txt  Wrapped.h  Wrapped.xml  main.py.in
